终于弄好dataGen啦(・∀・)
1.0-pre可以发布了呢(｡◕‿◕｡)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,13 +33,16 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
-    - name: Build with Gradle Wrapper
+    - name: Run DataGenera
+      run: ./gradlew runDatagen
+
+    - name: Build Mod
       run: ./gradlew build
 
     - name: Upload JAR artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: build result
+        name: build results
         path: ./build/libs/ # or path/to/artifact
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
