--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@
 }
 */
 plugins {
-    id 'fabric-loom' version '1.6-SNAPSHOT'
+    id 'fabric-loom' version '1.7-SNAPSHOT'
 }
 
 version = project.mod_version
@@ -47,33 +47,27 @@ repositories {
 }
 
 dependencies {
-    // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     implementation fileTree("libs")
     compileOnly 'org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT'
     compileOnly 'net.luckperms:api:5.4'
-    modImplementation "me.lucko:fabric-permissions-api:0.2-SNAPSHOT"
-    modImplementation 'software.bernie.geckolib:geckolib-fabric-1.20.4:4.4.1'
-    // Fabric API. This is technically optional, but you probably want it anyway.
+    modCompileOnly "me.lucko:fabric-permissions-api:0.2-SNAPSHOT"
+    //modImplementation 'software.bernie.geckolib:geckolib-fabric-1.20.4:4.4.1'
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compileOnly 'dev.folia:folia-api:1.20.2-R0.1-SNAPSHOT'
-    //implementation "net.neoforged:neoforge:20.4.210"
-    //modImplementation "maven.modrinth:ctlib:aftzbFe4"
 }
 
 processResources {
     inputs.property "version", project.version
-    inputs.property "minecraft_version", project.minecraft_version
-    inputs.property "loader_version", project.loader_version
     filteringCharset "UTF-8"
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.version,
-                "minecraft_version": project.minecraft_version,
-                "loader_version": project.loader_version
+        expand "version": project.version
+    }
+    filesMatching("plugin.yml") {
+        expand "version": project.version
     }
 }
 loom {
