--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
@@ -8,8 +9,8 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.15.11
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.crystalneko
+	mod_version = 1.0.0-pre
+	maven_group = org.cneko
 	archives_base_name = toNeko
 
 # Dependencies
