--- a/src/main/resources/assets/toneko/config.yml
+++ b/src/main/resources/assets/toneko/config.yml
@@ -15,10 +15,7 @@ chat:
   enable: true
   # 聊天格式，占位符 ${name} = 玩家名称, ${msg} = 玩家消息, ${prefix} = 前缀
   # Chat format, placeholder ${name} = player name, ${msg} = player message, ${prefix} = prefix
-  format: "${prefix}§e${name} §6>> §f${msg}"
-  # 猫娘口癖，通常会加在聊天末尾，可填写翻译键（即自定义语言文件中的键）或文本，例如："misc.toneko.nya"和"喵~"
-  # Catgirl tone, usually added at the end of the chat, can be filled in with the translation key (that is, the key in the custom language file) or text, such as "misc.toneko.nya" and "Miao~"
-  tone: "misc.toneko.nya"
+  format: "${prefix}§e${name} §d>> §f${msg}"
 # 启用统计功能，统计数据将发送到 toneko API，如何使用api请查看 https://github.com/CSneko/toNeko/blob/main/docs/TONEKO_ONLINE_API.md
 # Enable statistics, statistics data will be sent to the toneko API, how to use the api please see https://github.com/CSneko/toNeko/blob/main/docs/TONEKO_ONLINE_API.md
 stats: true
