--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: toNeko
-version: '0.4.6'
+version: '${version}'
 main: com.crystalneko.toneko.ToNeko
 api-version: '1.16'
 author: CrystalNeko
