--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.15.11
 
 # Mod Properties
-	mod_version = 1.0.0-pre
+	mod_version = 1.0.0
 	maven_group = org.cneko
 	archives_base_name = toNeko
 
