--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,13 @@ org.gradle.parallel=true
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
+minecraft_version=1.21
+yarn_mappings=1.21+build.7
 loader_version=0.15.11
 
+# Fabric API
+fabric_version=0.100.4+1.21
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 1.0.1
 	maven_group = org.cneko
 	archives_base_name = toNeko
-
-# Dependencies
-	# check this on https://modmuss50.me/fabric.html
-fabric_version=0.97.1+1.20.4
