--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@
 }
 */
 plugins {
-    id 'fabric-loom' version '1.7-SNAPSHOT'
+    id 'fabric-loom' version '1.6-SNAPSHOT'
 }
 
 version = project.mod_version
@@ -50,13 +50,14 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-    implementation fileTree("libs")
+
     compileOnly 'org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT'
     compileOnly 'net.luckperms:api:5.4'
     modCompileOnly "me.lucko:fabric-permissions-api:0.2-SNAPSHOT"
     //modImplementation 'software.bernie.geckolib:geckolib-fabric-1.20.4:4.4.1'
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     compileOnly 'dev.folia:folia-api:1.20.2-R0.1-SNAPSHOT'
+    modImplementation fileTree("libs")
 }
 
 processResources {
