--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,8 @@ loader_version=0.15.11
 
 # Fabric API
 fabric_version=0.100.4+1.21
+# GeckoLib
+geckolib_version=4.5.6
 # Mod Properties
 mod_version = 1.1.0
 maven_group = org.cneko
