--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,8 @@ loader_version=0.15.11
 fabric_version=0.100.4+1.21
 # GeckoLib
 geckolib_version=4.5.6
+# Trinkets
+trinkets_version = 3.10.0
 # Mod Properties
 mod_version = 1.1.4
 maven_group = org.cneko
