--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,10 @@ repositories {
         url = 'https://maven.ladysnake.org/releases'
     }
 
+    maven {
+        url "https://maven.neoforged.net/releases"
+    }
+
     flatDir {
         dirs 'libs'
     }
@@ -73,6 +77,12 @@ dependencies {
     modImplementation(name: "ctLibMod-0.1.12", ext: "jar")
     // 把本地目录下的libs/ctLibMod-0.1.12.jar嵌入
     include(name: "ctLibMod-0.1.12", ext: "jar")
+
+    // NeoForge
+    compileOnly "net.neoforged.fancymodloader:loader:4.0.22"
+    compileOnly "net.neoforged.fancymodloader:core:2.0.7"
+    compileOnly "net.neoforged:bus:8.0.1"
+    compileOnly(name: "fml-loader-4.0.22", ext: "jar")
 }
 
 processResources {
@@ -85,9 +95,12 @@ processResources {
     filesMatching("plugin.yml") {
         expand "version": project.version
     }
+    filesMatching("META-INF/neoforge.mods.toml") {
+        expand "version": project.version
+    }
 }
 
-def targetJavaVersion = 17
+def targetJavaVersion = 21
 tasks.withType(JavaCompile).configureEach {
     // ensure that the encoding is set to UTF-8, no matter what the system default is
     // this fixes some edge cases with special characters not displaying correctly
