迁移到Moj Map（ParchmentMC） 清理错误的import

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,10 @@ pluginManagement {
             url = 'https://maven.fabricmc.net/'
         }
         maven {
+            name = 'ParchmentMC'
+            url = 'https://maven.parchmentmc.org'
+        }
+        maven {
             name = 'Spigot'
             url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
 
