添加README与LICENSE,build.gradle修改

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,5 +6,8 @@ dependencies {
     // We depend on Fabric Loader here to use the Fabric @Environment annotations,
     // which get remapped to the correct annotations on each platform.
     // Do NOT use other classes from Fabric Loader.
+    modImplementation "maven.modrinth:ctlibmod:0.1.12"
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
+    include "maven.modrinth:ctlibmod:0.1.13"
+    modImplementation "software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${geckolib_version}"
 }
