--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,17 +33,14 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
-    - name: Run DataGenera
-      run: ./gradlew runDatagen
-
     - name: Build Mod
-      run: ./gradlew build
+      run: ./build.sh
 
     - name: Upload JAR artifacts
       uses: actions/upload-artifact@v4
       with:
         name: build results
-        path: ./build/libs/ # or path/to/artifact
+        path: ./result/ # or path/to/artifact
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
