--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
     include modApi("maven.modrinth:ctlibmod:0.1.13")
+    modImplementation "dev.emi:trinkets:${trinkets_version}"
 //    modImplementation "software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${geckolib_version}"
 }
 
