--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -31,7 +31,7 @@ side = "BOTH"
 [[dependencies.toneko]]
 modId = "minecraft"
 type = "required"
-versionRange = "[1.21,)"
+versionRange = "[1.21,1.22)"
 ordering = "NONE"
 side = "BOTH"
 
