--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ subprojects {
             officialMojangMappings()
             parchment("org.parchmentmc.data:parchment-1.21:2024.07.28@zip") // ParchmentMC版本，目前最新2024.07.28
         }
-        compileOnly 'dev.folia:folia-api:1.20.2-R0.1-SNAPSHOT'
+        compileOnly("io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT")
         modCompileOnly "me.lucko:fabric-permissions-api:0.2-SNAPSHOT"
         modImplementation "software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${geckolib_version}"
     }
