--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,4 +9,5 @@ dependencies {
     modImplementation "maven.modrinth:ctlibmod:0.1.13"
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
     //include "maven.modrinth:ctlibmod:0.1.13"
+    compileOnly("io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT")
 }
