--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,9 @@ subprojects {
                 includeGroup("software.bernie.geckolib")
             }
         }
+        flatDir {
+            dirs 'libs'
+        }
     }
 
     loom {
