--- a/common/build.gradle
+++ b/common/build.gradle
@@ -10,4 +10,5 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
     //include "maven.modrinth:ctlibmod:0.1.13"
     compileOnly("io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT")
+    compileOnly files("libs/paper-1.21.jar")
 }
