--- a/common/src/main/resources/assets/toneko/config.yml
+++ b/common/src/main/resources/assets/toneko/config.yml
@@ -13,8 +13,8 @@ chat:
   # 是否启用聊天修改 （开启后会对MCDr造成一定影响）
   # Whether to enable chat modification (it will cause some effects on MCDr)
   enable: true
-  # 聊天格式，占位符 ${name} = 玩家名称, ${msg} = 玩家消息, ${prefix} = 前缀
-  # Chat format, placeholder ${name} = player name, ${msg} = player message, ${prefix} = prefix
+  # 聊天格式，占位符 ${name} = 玩家名称, ${msg} = 玩家消息, ${prefix} = 前缀，也可以使用PlaceHolderAPI的占位符
+  # Chat format, placeholder ${name} = player name, ${msg} = player message, ${prefix} = prefix, also can use PlaceHolderAPI placeholder
   format: "${prefix}§e${name} §d>> §f${msg}"
 # 启用统计功能，统计数据将发送到 toneko API，如何使用api请查看 https://github.com/CSneko/toNeko/blob/main/docs/TONEKO_ONLINE_API.md
 # Enable statistics, statistics data will be sent to the toneko API, how to use the api please see https://github.com/CSneko/toNeko/blob/main/docs/TONEKO_ONLINE_API.md
