--- a/common/src/main/resources/paper-plugin.yml
+++ b/common/src/main/resources/paper-plugin.yml
@@ -1,5 +1,5 @@
 name: toNeko
-version: '1.3.7'
+version: '1.3.9'
 main: org.cneko.toneko.bukkit.ToNeko
 description: Turn Players to Neko in Minecraft
 api-version: '1.21'
@@ -17,3 +17,6 @@ dependencies:
       load: BEFORE
       required: true
       join-classpath: true
+    PlaceholderAPI:
+      load: BEFORE
+      required: false
