--- a/build.gradle
+++ b/build.gradle
@@ -58,9 +58,11 @@ subprojects {
             name = 'GeckoLib'
             url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
             content {
-                includeGroup("software.bernie.geckolib")
+                includeGroupByRegex("software\\.bernie.*")
+                includeGroup("com.eliotlash.mclib")
             }
         }
+
         flatDir {
             dirs 'libs'
         }
@@ -79,6 +81,7 @@ subprojects {
 
         modCompileOnly "me.lucko:fabric-permissions-api:0.2-SNAPSHOT"
         modImplementation "software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${geckolib_version}"
+        implementation("com.eliotlash.mclib:mclib:20")
     }
 
     java {
