--- a/gradle.properties
+++ b/gradle.properties
@@ -6,17 +6,17 @@ org.gradle.parallel=true
 mod_version = 1.3.9
 maven_group = org.cneko
 archives_name = toneko
-enabled_platforms = fabric,neoforge
+enabled_platforms = fabric
 
 # Minecraft properties
-minecraft_version = 1.21
+minecraft_version = 1.20.1
 
 # Dependencies
 fabric_loader_version = 0.15.11
-fabric_api_version = 0.102.0+1.21
+fabric_api_version = 0.92.2+1.20.1
 forgified_fabric_api_version = 0.101.2+2.0.9+1.21
 neoforge_version = 21.0.167
 # GeckoLib
-geckolib_version=4.5.6
+geckolib_version=4.4.9
 # Trinkets
-trinkets_version = 3.10.0
+trinkets_version = 3.7.2
