喵喵喵喵喵喵喵喵喵！！！！！！！！

--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     //implementation "software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"
     include modApi("maven.modrinth:ctlibmod:0.1.13")
     implementation "org.sinytra.forgified-fabric-api:forgified-fabric-api:${forgified_fabric_api_version}"
+    modImplementation "software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"
 }
 
 processResources {
