--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
     include modApi("maven.modrinth:ctlibmod:0.1.13")
     modImplementation "dev.emi:trinkets:${trinkets_version}"
+    modImplementation "software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${geckolib_version}"
 //    modImplementation "software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${geckolib_version}"
 }
 
