--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,5 @@ rootProject.name = 'toneko'
 include 'common'
 include 'fabric'
 include 'neoforge'
+include 'bukkit'
+project(':bukkit').projectDir = file('bukkit')
