--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
     include modApi("maven.modrinth:ctlibmod:0.1.13")
+    include "com.github.CSneko:NekoAI:$rootProject.nekoai_version"
+    include "io.netty:netty-codec-http:4.1.117.Final"
+    include "io.netty:netty-handler-proxy:4.1.117.Final"
     modImplementation "dev.emi:trinkets:${trinkets_version}"
     modImplementation "software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${geckolib_version}"
     modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")
