--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 1.5.5
+mod_version = 1.5.6
 maven_group = org.cneko
 archives_name = toneko
 enabled_platforms = fabric,neoforge
@@ -22,3 +22,5 @@ geckolib_version=4.5.6
 trinkets_version = 3.10.0
 # ModMenu
 modmenu_version = 11.0.1
+# NekoAI
+nekoai_version = v0.1.1-alpha
