--- a/build.gradle
+++ b/build.gradle
@@ -80,7 +80,7 @@ subprojects {
 
         implementation 'io.netty:netty-handler-proxy:4.1.117.Final'
 
-
+        implementation 'com.github.umjammer:jlayer:1.0.3'
     }
 
     java {
