蜜糖灾星・喵芙蕾

--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -9,13 +9,7 @@ version = "${version}"
 displayName = "toNeko"
 displayURL="https://github.com/CSneko/toNeko"
 authors = '''CrystalNeko
-Contributors:
-  MrHua269/Lora4967
-  pil0lo
-  QWERTY770
-  yichifauzi
-  HappyRespawnanchor
-  homewool
+Contributors:MrHua269/Lora4967,pil0lo,QWERTY770,yichifauzi,HappyRespawnanchor,homewool,ΗγΤζΡβΒι
 '''
 description = '''
 可爱即是正义!
