--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,10 @@ subprojects {
         // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
         // See https://docs.gradle.org/current/userguide/declaring_repositories.html
         // for more information about repositories.
-        maven {
-            name = 'ParchmentMC'
-            url = 'https://maven.parchmentmc.org'
-        }
+//        maven {
+//            name = 'ParchmentMC'
+//            url = 'https://maven.parchmentmc.org'
+//        }
         maven {
             name = "Modrinth"
             url = "https://api.modrinth.com/maven"
@@ -68,7 +68,7 @@ subprojects {
         minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
         mappings loom.layered() {
             officialMojangMappings()
-            parchment("org.parchmentmc.data:parchment-1.21:2024.07.28@zip") // ParchmentMC版本，目前最新2024.07.28
+            parchment("org.parchmentmc.data:parchment-1.21.1:2024.11.17@zip") // ParchmentMC版本，目前最新2024.11.17
         }
 
         modCompileOnly "me.lucko:fabric-permissions-api:0.3.1"
