嗷呜！配方支持~

--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -46,7 +46,7 @@ side = "BOTH"
 
 [[dependencies.toneko]]
 modId = "geckolib"
-type = "optional"
+type = "required"
 versionRange = "*"
 ordering = "NONE"
 side = "BOTH"
